--- a/css/styles.css
+++ b/css/styles.css
@@ -1006,6 +1006,10 @@ button {
   flex-direction: column;
 }
 
+.footer-first-list-item {
+  min-width: 132px;
+}
+
 .footer-first-list-item-text {
   font-size: 16px;
   line-height: 2.19;
@@ -1084,6 +1088,9 @@ button {
   margin-bottom: 40px;
 }
 
+.footer-number-field .customer {
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.25);
+}
 /* customer page styles start */
 /* our clients styles start */
 
@@ -1262,3 +1269,124 @@ button {
 /* How product work styles end */
 
 /* Join thousand of other who have already received offers styles start */
+
+.container.join-container {
+  max-width: 100%;
+  background-image: linear-gradient(
+    180deg,
+    #f5f5f5 0%,
+    rgba(245, 245, 245, 0) 100%
+  );
+  display: flex;
+  flex-direction: column;
+  padding-top: 35px;
+  padding-bottom: 45px;
+  align-items: center;
+  justify-content: center;
+}
+
+.join-title {
+  font-size: 32px;
+  text-align: center;
+  max-width: 537px;
+  margin-bottom: 93px;
+}
+
+.join-list {
+  display: flex;
+  flex-direction: row;
+  gap: 227px;
+}
+
+.join-common-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.join-images {
+  margin-bottom: 27px;
+}
+
+.join-subtitles {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  color: #000;
+  margin-bottom: 16px;
+}
+
+.join-first-list-item-text {
+  font-size: 18px;
+  line-height: 1.78;
+  text-align: center;
+  margin-bottom: 12px;
+}
+
+.join-first-list-last-item-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.75;
+  color: #000;
+}
+
+.join-second-list-item-text {
+  font-size: 18px;
+  line-height: 1.78;
+  text-align: center;
+  margin-bottom: 12px;
+}
+
+.join-second-list-last-item-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.75;
+  color: #000;
+}
+
+/* Join thousand of other who have already received offers styles end */
+
+/* promo section styles start */
+
+.customer-page-promo-container {
+  padding-left: 51px;
+  padding-right: 31px;
+  max-width: 968px;
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+  border-radius: 32px;
+  background-color: #02897a;
+  margin-bottom: 150px;
+}
+
+.customer-page-promo-text-and-button {
+  padding-top: 49px;
+}
+
+.customer-page-promo-text {
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 1.514;
+  color: #fff;
+  margin-bottom: 59px;
+}
+
+.customer-page-promo-button {
+  cursor: pointer;
+  border-radius: 8px;
+  min-width: 150px;
+  min-height: 50px;
+  background-color: #fff;
+  font-weight: 600;
+  font-size: 20px;
+  padding: 10px 35px;
+  border: none;
+}
+
+.customer-page-promo-image {
+  margin-top: 4px;
+}
+
+/* promo section styles end */
