--- a/css/styles.css
+++ b/css/styles.css
@@ -130,6 +130,19 @@ button {
   padding: 9px 24px;
 }
 
+.theme-btn {
+  margin-left: 24px;
+  margin-right: auto;
+  border-radius: 50%;
+  min-width: 32px;
+  min-height: 32px;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 /* header styles end */
 
 /* main styles start */
@@ -1106,7 +1119,7 @@ button {
   margin-bottom: 40px;
 }
 
-.footer-number-field .customer {
+.footer-number-field.customer {
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.25);
 }
 /* customer page styles start */
